# reference: https://realpython.com/pypi-publish-python-package/#publish-your-package-to-pypi

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-api-python"
version = "1.0.0"
description = "client sdk to access GPT API"
readme = "README.md"
authors = [{ name = "Beeno Tung", email = "aabbcc1241@yahoo.com.hk" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "gpt",
    "gpt-api",
    "openai",
    "language-model",
    "nlp",
    "ai",
    "chatbot",
    "text-generation",
    "text-summarization",
    "translation",
    "question-answering",
    "sentiment-analysis",
    "content-moderation",
    "conversational-ai",
    "poe",
    "sdk"
]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/beenotung/gpt-api"

[project.scripts]
gpt-api = "gpt_api.__main__:main"
